[package]
name = "cme-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
flate2 = "1.0.25"
nom = "7.1.3"
pcap-file = "2.0.0"
serde = { version = "1.0.152", features = ["derive"] }
